--- a/drugDecision.ipynb
+++ b/drugDecision.ipynb
@@ -25,6 +25,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tratamento dos dados"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 80,
    "metadata": {},
